ansible/roles/setup_root_stack/files/calico-policies/glabal-network-policy.yaml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  selector: all()
  types: [Ingress, Egress]
  ingress: []
  egress: []
